# scm_p11

CMApi/CMApi/: Android.mk  CMakeLists.txt  Makefile  android_make.sh  readme  ubuntu_make.sh
CMApi/CMApi/p11/: Makefile  tags
CMApi/CMApi/p11/include/: Proxy.h  hd_alg_def.h  hd_type_def.h  pkcs11.h  pkcs11f.h  pkcs11n.h  pkcs11t.h  pkcs11v.h
CMApi/CMApi/p11/src/: apdu.c  bn.c  bn.h  cetcsc.c  cetcsc.h  curve.h  ecp.c  ecp.h  internal-winscard.h  libscdl.c  libscdl.h  new_smvc_func.c  p11_crypt.c  p11_digest.c  p11_dual.c  p11_extend.c  p11_general.c  p11_key.c  p11_object.c  p11_parallel.c  p11_random.c  p11_session.c  p11_sign.c  p11_thread.c  p11_thread.h  p11_token.c  p11_verify.c  p11func.h  p11x_error.c  p11x_extend.h  p11x_log.c  p11x_object.c  p11x_session.c  p11x_slot.c  p11x_state.c  p11x_util.c  pace.h  pkcs15-framework.c  reader-pcsc.c  sc_define.h  (+13 more)
CMApi/CMApi/p11/src/process/: new_sm2_process.c  new_sm2_process.h  new_sm3_process.c  new_sm3_process.h  new_sm4_process.c  new_sm4_process.h
CMApi/CMApi/p11/src/usb_send/: apdu_cmd.c  apdu_cmd.h  cmdTest.c  debug.h  usbT.c  usb_send.h
Common/: Android.mk  CMakeLists.txt  android_make.sh  ubuntu_make.sh
Common/include/: LogMsg.h  WaOsPal.h
Common/src/: LogMsg.c  Makefile  WaOsPal.c
Test/Test_P11/: android_build.sh  readme  run_android.sh  run_ubuntu.sh  ubuntu_build.sh
Test/Test_P11/ios/test_p11/arm64/: libSAF.dylib  libchannel.dylib  libcmapi.dylib  libcommon.dylib  libmosquitto.dylib  libucm.dylib
Test/Test_P11/ios/test_p11/test_p11/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m  p11_model_test.c  p11_module_test.c  p11_module_test.h
Test/Test_P11/ios/test_p11/test_p11.xcodeproj/: project.pbxproj
Test/Test_P11/ios/test_p11/test_p11.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Test/Test_P11/ios/test_p11/test_p11.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
Test/Test_P11/ios/test_p11/test_p11.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Test/Test_P11/ios/test_p11/test_p11.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
Test/Test_P11/src/: Android.mk  Makefile  main.c  p11_model_test.c  p11_model_test.h
proj/CMApi.si4project/: CMApi.SearchResults  CMApi.sip_sym  CMApi.sip_xab  CMApi.sip_xad  CMApi.sip_xc  CMApi.sip_xf  CMApi.sip_xm  CMApi.sip_xr  CMApi.sip_xsb  CMApi.sip_xsd  CMApi.siproj  CMApi.siwork
proj/CMApi.si4project/Backup/: new_sm2_process(3147).h  new_sm2_process(6920).c  new_sm2_process(7858).h  new_sm2_process(831).c  new_sm3_process(7471).h  new_smvc_func(4521).c  sc_define(5879).h  sm3_process(545).c  sm4_process(3550).c  smvc(7618).c  usb_send(7992).c
proj/CMApi.si4project/cache/parse/: .._.._usb_send_apdu_cmd.c.sisc  .._.._usb_send_apdu_cmd.h.sisc  .._.._usb_send_debug.h.sisc  .._.._usb_send_usb_send.c.sisc  .._.._usb_send_usb_send.h.sisc  .._CMApi_CMApi_p11_include_Proxy.h.sisc  .._CMApi_CMApi_p11_include_cryptoki.h.sisc  .._CMApi_CMApi_p11_include_hd_alg_def.h.sisc  .._CMApi_CMApi_p11_include_hd_type_def.h.sisc  .._CMApi_CMApi_p11_include_pkcs11.h.sisc  .._CMApi_CMApi_p11_include_pkcs11f.h.sisc  .._CMApi_CMApi_p11_include_pkcs11n.h.sisc  .._CMApi_CMApi_p11_include_pkcs11t.h.sisc  .._CMApi_CMApi_p11_include_pkcs11v.h.sisc  .._CMApi_CMApi_p11_include_vendor.h.sisc  .._CMApi_CMApi_p11_src_apdu.c.sisc  .._CMApi_CMApi_p11_src_bn.c.sisc  .._CMApi_CMApi_p11_src_bn.h.sisc  .._CMApi_CMApi_p11_src_cetcsc.c.sisc  .._CMApi_CMApi_p11_src_cetcsc.h.sisc  .._CMApi_CMApi_p11_src_config.h.sisc  .._CMApi_CMApi_p11_src_curve.h.sisc  .._CMApi_CMApi_p11_src_ecp.c.sisc  .._CMApi_CMApi_p11_src_ecp.h.sisc  .._CMApi_CMApi_p11_src_internal-winscard.h.sisc  .._CMApi_CMApi_p11_src_libscdl.c.sisc  .._CMApi_CMApi_p11_src_libscdl.h.sisc  .._CMApi_CMApi_p11_src_new_smvc_func.c.sisc  .._CMApi_CMApi_p11_src_p11_crypt.c.sisc  .._CMApi_CMApi_p11_src_p11_digest.c.sisc  .._CMApi_CMApi_p11_src_p11_dual.c.sisc  .._CMApi_CMApi_p11_src_p11_extend.c.sisc  .._CMApi_CMApi_p11_src_p11_general.c.sisc  .._CMApi_CMApi_p11_src_p11_key.c.sisc  .._CMApi_CMApi_p11_src_p11_object.c.sisc  .._CMApi_CMApi_p11_src_p11_parallel.c.sisc  .._CMApi_CMApi_p11_src_p11_random.c.sisc  .._CMApi_CMApi_p11_src_p11_session.c.sisc  .._CMApi_CMApi_p11_src_p11_sign.c.sisc  .._CMApi_CMApi_p11_src_p11_thread.c.sisc  (+44 more)
